[Linux] Don't query missing D&D targets
Categories
(Core :: Widget: Gtk, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox94 | --- | fixed |
People
(Reporter: stransky, Assigned: stransky)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
Don't query missing D&D targets - it wastes resources and makes D&D longer.
| Assignee | ||
Comment 1•4 years ago
|
||
Right now we query all MIME data types during D&D operation and rely on Gtk to filter out
missing ones. It leads to possible D&D failures as we can't process D&D events
from Gtk during it.
This patch does:
- Query MIME types available for D&D transfer by nsDragService::GetDragFlavors().
- Quit early at nsDragService::GetTargetDragData() when requested MIME can't be transferred by D&D.
- Use gdk_drag_context_get_suggested_action() instead of gdk_drag_context_get_actions().
- Check mTargetWindow before we use it.
Comment 3•4 years ago
|
||
| bugherder | ||
Comment 4•4 years ago
|
||
Backed out along with Bug 1730203 for drag and drop of tabs causing duplicates (Bug 1732116).
backout: https://hg.mozilla.org/mozilla-central/rev/ba378c62cecf6a3048baddde1f9c7d61b45a2914
Updated•4 years ago
|
| Assignee | ||
Comment 5•4 years ago
|
||
(In reply to Natalia Csoregi [:nataliaCs] from comment #4)
Backed out along with Bug 1730203 for drag and drop of tabs causing duplicates (Bug 1732116).
backout: https://hg.mozilla.org/mozilla-central/rev/ba378c62cecf6a3048baddde1f9c7d61b45a2914
No need to backout that, a fix is already at Bug 1732116.
Comment 7•4 years ago
|
||
(In reply to Martin Stránský [:stransky] (ni? me) from comment #5)
No need to backout that, a fix is already at Bug 1732116.
The fix was still pending review and we needed to ship a fixed Nightly asap.
Comment 8•4 years ago
|
||
Martin, I've noticed that copying and pasting images in Telegram chats has stopped working reliably around the same time. Could it be related to one of these recent changes?
Comment 9•4 years ago
|
||
| bugherder | ||
| Assignee | ||
Comment 10•4 years ago
|
||
(In reply to Marco Castelluccio [:marco] from comment #8)
Martin, I've noticed that copying and pasting images in Telegram chats has stopped working reliably around the same time. Could it be related to one of these recent changes?
This is about D&D only. Please file a new bug for copy/paste bug. Do you use Wayland or X11?
Comment 11•4 years ago
|
||
Yeah, I filed bug 1732681.
Updated•4 years ago
|
Description
•