Bug 1731197 [Linux] Make D&D operations more reliable and transfer only available D&D data types, r=emilio

Right now we query all MIME data types during D&D operation and rely on Gtk to filter out
missing ones. It leads to possible D&D failures as we can't process D&D events
from Gtk during it.

This patch does:

- Query MIME types available for D&D transfer by nsDragService::GetDragFlavors().
- Quit early at nsDragService::GetTargetDragData() when requested MIME can't be transferred by D&D.
- Use gdk_drag_context_get_suggested_action() instead of gdk_drag_context_get_actions().
- Check mTargetWindow before we use it.

Differential Revision: https://phabricator.services.mozilla.com/D126200